--- a/netflix-build-youtube/src/screens/LoginScreen.css
+++ b/netflix-build-youtube/src/screens/LoginScreen.css
@@ -1,8 +1,9 @@
 .loginScreen {
   position: relative;
   height: 100%;
-  background: url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg")
-    center no-repeat;
+   background: url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg")
+    center no-repeat; 
+   
   background-size: cover;
 }
 
@@ -15,6 +16,8 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    left: 0;
+    right: 0;
 }
 
 .loginScreen_body > h1{
